# opensync-akonadi

./: CMakeLists.txt  README
cmake/modules/: FindOpenSync.cmake
src/: CMakeLists.txt  akonadi-sync  akonadi_opensync.cpp  akonadisink.cpp  akonadisink.h  datasink.cpp  datasink.h  sinkbase.cpp  sinkbase.h
